# cybersec-labs

./: .gitignore  1_2.py  1_3.py  1_4.py  casino.py  debase64.py  initial.py  lab0.txt  links.txt  utils.py
lab1/: 1_2.py  1_3.py  1_3_1.py  1_4.py  1_4_simple.py  1_5.py  GA.py  GA2.py  base_GA.py  input_1.4.txt  input_1.5.txt  lab0.txt  train_text.txt  utils.py
lab1/lab1.5/: ga_cfg.go  go.mod  go.sum  individ.go  infosec_lab1.5  key.go  main.go  ngram_parser.go  poly_ga.go  texts.go  utils.go  utils_test.go
lab1/randseed/: randseed.c  randseed.go  randseed.py
lab2/: GA2.py  decipher.txt  input_single.txt  main.py  salsa20.py  utils.py
lab3/: api.py  casino.py  entities.py  mtcrack.py  mtimpl.py
lab4/: README.md  crackedmd5.potfile  crackedsha1.potfile  go.mod  go.sum  hl.txt  main.go  mywordlist.txt  pwdgen.go  recover.py  runhashcat.sh
lab56/: README.md
lab56/client/: package-lock.json  package.json
lab56/client/src/: App.svelte
lab56/server/: Cargo.toml  README.md
lab56/server/migrations/: 07122020_up.sql
lab56/server/src/: crypto.rs  error.rs  handlers.rs  main.rs  models.rs  ratelimiter.rs  routes.rs  utils.rs
lab567/client/: package.json
lab567/server/: Cargo.toml  README.md
lab567/server/src/: db.rs  error.rs  handlers.rs  main.rs  routes.rs  utils.rs
lab7/: make_cert.sh
lab8/scripts/: final0.py  stack0.sh  stack1.sh  stack2.py  stack3.py  stack4.py  stack5.py  stack6.py
