[package]
name = "server"
version = "0.1.0"
authors = ["kraftwerk28 <kefirchik3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "*"
rand = "*"
pretty_env_logger = "*"
log = "*"
tokio = { version = "^0.2", features = ["macros"] }
serde = { version = "*", features = ["derive"] }
tokio-postgres = { version = "^0.5", features = ["runtime"] }
dotenv = "*"
base64 = "*"

rust-argon2 = "0.8"
aes-gcm = "0.8.0"
